<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/option_1"
        android:title="filter by date"
        app:showAsAction="never" />
    <item
        android:id="@+id/option_2"
        android:title="filter by room"
        app:showAsAction="never" />
    <item
        android:id="@+id/option_3"
        android:title="reset"
        app:showAsAction="never" />

</menu>