...
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="TextView"
        app:layout_constraintBottom_toBottomOf="@+id/item_list_meeting_avatar"
        app:layout_constraintStart_toEndOf="@+id/item_list_meeting_avatar"
        app:layout_constraintEnd_toStartOf="@id/item_list_meeting_delete_button"
        android:maxLines="1"/>

    <ImageButton
        android:id="@+id/item_list_meeting_delete_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
...
